gcp/k8s/deployment.yml
apiVersion: apps/v1beta1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: atpricetracker-deployment
  labels:
    app: atpricetracker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: atpricetracker
  template:
    metadata:
      labels:
        app: atpricetracker
    spec:
      containers:
      - name: atpricetracker
        image: gcr.io/atpricetracker/atpricetracker:latest
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /healthz
            ports: 80
